--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -1,6 +1,6 @@
 <loading-component [isLoading]="isLoading"></loading-component>
 
-<div class="full-height overflow-y-auto" *ngIf="!isLoading">
+<div class="full-height invoice-operations" *ngIf="!isLoading">
 	<div class="invoice-summary">
 		<i class="fa fa-angle-left cycle-related-invoices pull-left clickable"></i>
 		<i class="fa fa-angle-right cycle-related-invoices m-l-6 clickable"></i>
