#429 Small enhancements within the invoice overview layout

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -32,6 +32,6 @@
 				<div class="add-payer-text">{{ 'ADD PAYER' | translate }}</div>
 			</div>
 	</div>
-	<invoice-edit>
+	<invoice-edit customScroll>
 	</invoice-edit>
 </div>
