--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
@@ -56,4 +56,10 @@
 		>
 	</invoice-operations-page>
 
+	<invoice-operations-page-deprecated class="full-height" 
+		*ngIf="isInvoiceOperationsPageDeprecated()"
+		[invoiceOperationsPageParam]="currentHotelOperationsPageParam"
+		>
+	</invoice-operations-page-deprecated>
+
 </div>
